--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
+    "@heroicons/react": "^2.0.17",
     "@sanity/client": "^4.0.1",
     "@sanity/image-url": "^1.0.2",
     "next": "latest",
